implement DTO's to not show the irelevant internals to users